--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -26,18 +26,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html"><i class="fa fa-user"></i>Drivers</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Constructors
-                        </a>
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-graduation-cap"></i></a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="constructors.html">All Constructors</a></li>
                             <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
                         </ul>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html">Seasons</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html">Races</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html"><i class="fa fa-road"></i>Circuits</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html"><i class="fa fa-calendar"></i>Seasons</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html"><i class="fa fa-flag-checkered"></i>Races</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             More
