--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -111,9 +111,7 @@
             </tbody>
         </table>
     </div>
-    <div id="map" style="height: 180px;">
-
-    </div>
+    <canvas style="height:500px;" id="canvas"></canvas>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -133,9 +131,6 @@
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-            crossorigin=""></script>
     <script src="circuits.js"></script>
 </body>
 </html>
