--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -89,27 +89,18 @@
         </div>
 
         <!-- /ko -->
-        <table class="table table-striped table-sm small">
-            <thead class="bg-dark text-light">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Nationality</th>
-                    <th scope="col" class="text-right"></th>
-                </tr>
-            </thead>
-            <tbody data-bind="foreach: records">
-                <tr>
-                    <td class="align-middle" data-bind="text:CircuitId"></td>
-                    <td class="align-middle" data-bind="text:Name"></td>
-                    <td class="align-middle" data-bind="text:Country"></td>
-                    <td class="text-end">
-                        <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./circuitDetails.html?id=' + CircuitId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                        <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + CircuitId }" title="Selecione para adicionar aos favoritos"></i></button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="col-md-3 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
+            <div class="zoom" style="width:30%; float:left; margin:20px;">
+                <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="height: 300px;" alt="Circuit Image">
+                <div class="card-body" style="width:100%;">
+                    <h5 class="card-title"><span data-bind="text: Name"></span></h5>
+                    <p class="card-title">CircuitId: <span data-bind="text: CircuitId"></span></p>
+                </div>
+                <div class="footer">
+                    <a href="circuitDetails.html" class="btn btn-outline-dark" style="width:100%; border-radius: 0px;">Circuit Details</a>
+                </div>
+            </div>
+        </div>
     </div>
     <canvas style="height:500px;" id="canvas"></canvas>
     <!-- Modal -->
