--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -27,6 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html"><i class="fa fa-user"></i>Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html">Favourites</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-graduation-cap"></i></a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
