--- a/Projeto/nav.html
+++ b/Projeto/nav.html
@@ -23,6 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html">Favourites</a></li>
                 <li class="nav-item"> 
                     <div class="dropdown">
                     <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Constructors</a>
