--- a/Projeto/history.html
+++ b/Projeto/history.html
@@ -25,6 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html"><i class="fa fa-user"></i>Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html"><i class="fa fa-heart"></i>Favourites</a></li>
                     <li class="nav-item">
                         <div class="dropdown">
                             <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-graduation-cap"></i>Constructors</a>
