--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -50,10 +50,12 @@
             </div>
         </div>
     </nav>
-    <div class="filler" style="width:100%;height:50px"></div>
+    <div class="filler" style="width:100%;height:100px"></div>
+    <div class="container">
+        <br />
+        <h1 data-bind="text: Name"></h1>
 
-
-
+    </div>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
