--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -53,28 +53,50 @@
     </nav>
     <div class="filler" style="width:100%;height:100px"></div>
     <div class="container">
-        <br />
         <h1 data-bind="text: Name"></h1>
-
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-dark text-light">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                        <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
-
-                    </h5>
+            <img data-bind="attr:{src: ImageUrl}" style="height:350px; width: 45%; border: 5px red solid;border-radius: 10px; float:left;" alt="Circuit Image">
+            <div style="width: 45%;" class="row">
+                <div class="col-md-6 col-sm-12" id="circuitid" style='width: 100%;'>
+                    <small class="form-label" for="circuitid">CircuitId</small>
+                    <h3 style="width: 30%; border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: CircuitId"></h3>
                 </div>
-                <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+                <div class="col-md-6 col-sm-12" id="country" style="width: 45%;">
+                    <small class="form-label" for="country">Country</small>
+                    <h3 style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Country"></h3>
                 </div>
+                <div class="col-md-6 col-sm-12" id="location" style="width: 45%">
+                    <small class="form-label" for="location">Location</small>
+                    <h3 style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Location"></h3>
+                </div>
+                <div class="col-md-6 col-sm-12" id="url" style="width: 100%">
+                    <small class="form-label" for="url">Url</small>
+                    <p style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Url"></p>
+                </div>
+                <button class="btn btn-default btn-sm btn-outline-danger btn-favourite" style="width: 35px; margin: 30px;" data-bind="click: () => $parent.toggleFavourite(CirctuitId), attr : { 'id': 'favourite_' + CircuitId }">
+                    <i data-bind="attr : { 'class' : $parent.favourites().includes(CircuitId) ? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
+                </button>
             </div>
-        </div>
-    </div>
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="circuitDetails.js"></script>
+
+
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header bg-dark text-light">
+                                <h5 class="modal-title" id="exampleModalLabel">
+                                    <i class="fa fa-spin fa-3x fa-refresh"></i>                                                        Loading data...
+
+                                </h5>
+                            </div>
+                            <div class="modal-body text-center" style="background-image: url(https://www.gqportugal.pt/media/pages/4472/full_F1.jpg); background-position: center; background-size: cover; height: 100px;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script src="../Scripts/bootstrap.bundle.min.js"></script>
+                <script src="../Scripts/knockout-3.5.1.js"></script>
+                <script src="../Scripts/jquery-3.6.0.min.js"></script>
+                <script src="circuitDetails.js"></script>
 </body>
 </html>
