--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -56,19 +56,19 @@
         <h1 data-bind="text: Name"></h1>
             <img data-bind="attr:{src: ImageUrl}" style="height:350px; width: 45%; border: 5px red solid;border-radius: 10px; float:left;" alt="Circuit Image">
             <div style="width: 45%;" class="row">
-                <div class="col-md-6 col-sm-12" id="circuitid" style='width: 100%;'>
+                <div id="circuitid" style='width: 100%;'>
                     <small class="form-label" for="circuitid">CircuitId</small>
                     <h3 style="width: 30%; border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: CircuitId"></h3>
                 </div>
-                <div class="col-md-6 col-sm-12" id="country" style="width: 45%;">
+                <div id="country" style="width: 50%;">
                     <small class="form-label" for="country">Country</small>
                     <h3 style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Country"></h3>
                 </div>
-                <div class="col-md-6 col-sm-12" id="location" style="width: 45%">
+                <div id="location" style="width: 50%">
                     <small class="form-label" for="location">Location</small>
                     <h3 style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Location"></h3>
                 </div>
-                <div class="col-md-6 col-sm-12" id="url" style="width: 100%">
+                <div id="url" style="width: 100%">
                     <small class="form-label" for="url">Url</small>
                     <p style="border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;" data-bind="text: Url"></p>
                 </div>
