--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -98,7 +98,7 @@
                     <p class="card-title">CircuitId: <span data-bind="text: CircuitId"></span></p>
                 </div>
                 <div class="footer">
-                    <a href="circuitDetails.html" class="btn btn-danger" style="width:100%; border-radius: 0px;">Circuit Details</a>
+                    <a data-bind="attr: { href:'./circuitDetails.html?id=' + CircuitId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Circuit Details</a>
                 </div>
             </div>
         </div>
