--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -73,6 +73,9 @@
                     <a style="padding-right:5px;display:inline-block;border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;text-decoration:none" data-bind="attr: { href: Url() }">Wikipedia Link</a>
                     
                 </div>
+                <button class="btn btn-default btn-sm btn-outline-danger btn-favourite" style="width: 35px; margin: 30px;" data-bind="click: () => $parent.toggleFavourite2(CircuitId), attr : { 'id': 'favourite_' + CircuitId }">
+                    <i data-bind="attr : { 'class' : $parent.favourites2().includes(CircuitId) ? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
+                </button>
             </div>
         <div data-bind="foreach: Races">
             <span data-bind="text: RaceId"></span>
