--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -89,35 +89,30 @@
                     <!-- /ko -->
                     <!-- ko if: currentPage() < totalPages() - 4 && totalPages() > 9 -->
                     <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './constructors.html?page=' + nextPage(), rel:'next' }">→</a></li>
-                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './construcotrs.html?page=' + totalPages() }">⇥</a></li>
+                    <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './constructors.html?page=' + totalPages() }">⇥</a></li>
                     <!-- /ko -->
                 </ul>
             </div>
         </div>
-
-            <!-- /ko -->
-            <table class="table table-striped table-sm small">
-                <thead class="bg-dark text-light">
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Nationality</th>
-                        <th scope="col" class="text-right"></th>
-                    </tr>
-                </thead>
-                <tbody data-bind="foreach: records">
-                    <tr>
-                        <td class="align-middle" data-bind="text:ConstructorId"></td>
-                        <td class="align-middle" data-bind="text:Name"></td>
-                        <td class="align-middle" data-bind="text:Nationality"></td>
-                        <td class="text-end">
-                            <a class="btn btn-default btn-light btn-sm" data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }"><i class="fa fa-eye" title="Selecione para ver detalhes"></i></a>
-                            <button class="btn btn-default btn-sm" onclick="setFavorites()"><i class="fa fa-heart-o" style="pointer-events: none;" data-bind="attr : { 'id': 'favourite_' + ConstructorId }" title="Selecione para adicionar aos favoritos"></i></button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <!-- /ko -->
+        <div class="col-md-3 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
+            <div class="zoom" style="width:30%; float:left; margin:20px;">
+                <!-- ko if: ImageUrl-->
+                <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="width: 100%; height: 150px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Contructor Image">
+                <!-- /ko -->
+                <!-- ko ifnot: ImageUrl-->
+                <img class="img fluid" src="Images/formula1logo.png" style="width: 100%; height: 150px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Contructor Image" >
+                <!-- /ko -->
+                <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
+                    <h5 class="card-title"><span data-bind="text: Name"></span></h5>
+                    <p class="card-title">ConstructorId: <span data-bind="text: ConstructorId"></span></p>
+                </div>
+                <div class="footer">
+                    <a data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Constructor Details</a>
+                </div>
+            </div>
         </div>
+    </div>
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
