--- a/Projeto/races.html
+++ b/Projeto/races.html
@@ -55,7 +55,7 @@
     <div class="filler" style="width:100%;height:50px"></div>
     <div class="container">
         <div class="border-bottom pt-4 pb-2 mb-3">
-            <h2>Circuits List</h2>
+            <h2>Races List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
