--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -105,7 +105,7 @@
                 <!-- /ko -->
                 <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
                     <h5 class="card-title"><span data-bind="text: Name"></span></h5>
-                    <p class="card-title">ConstructorId: <span data-bind="text: ConstructorId"></span></p>
+                    <p class="card-title"> ConstructorId: <span data-bind="text: ConstructorId"></span><button style="float: right" class="btn btn-default btn-sm btn-outline-danger btn-favourite"><i class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i></button></p>
                 </div>
                 <div class="footer">
                     <a data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Constructor Details</a>
