--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -60,6 +60,7 @@
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
             <h2>Favourites</h2>
         </div>
+        <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 3px groove red;text-align: left; margin: 30px; margin-top: 0px;" >Drivers</h3>
         <main>
         <div class="row" data-bind="foreach: records">
         <div class="col-md-6 col-lg-3 col-sm-12" style="margin-bottom:20px;"  >
@@ -78,8 +79,13 @@
                         </div>
                 </div>
             </div>
+            <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 3px groove red;text-align: left; margin: 30px; margin-top: 0px;" >Constructors</h3>
           </div>
+
         </main>
+       
+        
+
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
