--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -105,7 +105,9 @@
                 <!-- /ko -->
                 <div class="card-body" style="width: 100%; border: 2px solid; border-top: none; border-bottom-left-radius: 6px; border-bottom-right-radius: 6px;">
                     <h5 class="card-title"><span data-bind="text: Name"></span></h5>
-                    <p class="card-title"> ConstructorId: <span data-bind="text: ConstructorId"></span><button style="float: right" class="btn btn-default btn-sm btn-outline-danger btn-favourite"><i class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i></button></p>
+                    <button class="btn btn-default btn-sm btn-outline-danger btn-favourite" data-bind="click: () => $parent.toggleFavourite(ConstructorId), attr : { 'id': 'favourite_' + ConstructorId }">
+                        <i data-bind="attr : { 'class' : $parent.favourites2().includes(ConstructorId) ? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
+                    </button>
                 </div>
                 <div class="footer">
                     <a data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Constructor Details</a>
