--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -62,31 +62,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html"><i class="fa fa-user"></i>Drivers</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html"><i class="fa fa-heart"></i>Favourites</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-graduation-cap"></i>Constructors</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
-                                <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
-                            </ul>
-                        </div>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html"><i class="fa fa-graduation-cap"></i>Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html"><i class="fa fa-road"></i>Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html"><i class="fa fa-calendar"></i>Seasons</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html"><i class="fa fa-flag-checkered"></i>Races</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='history.html'>History</a></li>
-                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
-                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
-                                <li><a class="dropdown-item" href="tickets.html">Buy Tickets</a></li>
-                            </ul>
-                        </div>
-                    </li>
+                    <li class="nav-item me-auto"><a class="nav-link" aria-current="page" href="tickets.html"><i class="fa fa-shopping-cart"></i>  Tickets</a></li>
                 </ul>
             </div>
         </div>
@@ -124,35 +107,6 @@
             </div>
             <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        <div class="col">
-            <div class="card-link">
-                <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="315">
-                <div class="card-body">
-                    <h5 class="card-title">Formula 1 - The History</h5>
-                    <p class="card-text"><a href="history.html" style="text-decoration: none">All you need to know about Formula 1.</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="https://i.pinimg.com/736x/64/d0/c7/64d0c7c90fffc79c565e95b61ae35f3d.jpg" class="card-img-top" alt="The Legends" height="315">
-                <div class="card-body">
-                    <h5 class="card-title">Formula 1 - The Legends</h5>
-                    <p class="card-text"><a href="legends.html" style="text-decoration: none">The ones we will never forget.</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="https://www.verstappen.com/img/2019/Algemene_Autosport_Fotos/JMP_1964-45b.jpg" class="card-img-top" alt="The Rules" height="315">
-                <div class="card-body">
-                    <h5 class="card-title">Formula 1 - Rules</h5>
-                    <p class="card-text"><a href="rules.html" style="text-decoration: none">The rules of formula 1.</a></p>
                 </div>
             </div>
         </div>
