--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>F1 Tracker - Drivers</title>
+    <title>F1 Tracker - Favorites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
@@ -58,7 +58,7 @@
     <!-- Working Area -->
     <div class="container">
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
-            <h2>Favourites<h6>Check out your favorite drivers and constructors!</h6></h2>
+            <h2>Favourites<h6>Check out your favourite drivers and constructors!</h6></h2>
             
         </div>
         <h5 style="display:inline-block;padding-right:20px;width:100%; border-top-right-radius: 25px; border: 10px groove red;text-align: left; margin: 30px; margin-top: 0px;font-size:32px;" >Drivers</h3>
