--- a/Projeto/tickets1.html
+++ b/Projeto/tickets1.html
@@ -93,9 +93,19 @@
             <div style="width: 40%; float: right;"><button type="button" class="btn btn-outline-dark" disabled>Total to pay:</button><span id="total" style="border-radius: 10px; border:1px; padding:30px;font-weight:bold;color:green">0.00€</span></div>
         </form>
     </div>
-        <script src="../Scripts/bootstrap.bundle.min.js"></script>
-        <script src="../Scripts/knockout-3.5.1.js"></script>
-        <script src="../Scripts/jquery-3.6.0.min.js"></script>
-        <script src="tickets.js"></script>
+    <div class="filler" style="width:100%;height:200px"></div>
+    <nav class="navbar navbar-dark bg-dark fixed-bottom">
+        <div class="container small">
+            <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
+            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for <a href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a> by <a href="mailto:filipe.obrist@ua.pt" class="text-decoration-none text-muted">filipe.obrist@ua.pt</a> &  <a href="mailto:rodrigoaguiar96@ua.pt" class="text-decoration-none text-muted">rodrigoaguiar96@ua.pt</a></div>
+            <div class="navbar-nav">
+                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a></div>
+            </div>
+        </div>
+    </nav>
+    <script src="../Scripts/bootstrap.bundle.min.js"></script>
+    <script src="../Scripts/knockout-3.5.1.js"></script>
+    <script src="../Scripts/jquery-3.6.0.min.js"></script>
+    <script src="tickets.js"></script>
 </body>
 </html>
