--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -57,16 +57,26 @@
                 <a style="padding-right:5px;display:inline-block;border-bottom-right-radius: 6px; border: 3px groove; border-left: none; border-top: none; text-align: left; margin: 30px; margin-top: 0px;text-decoration:none" data-bind="attr: { href: Url() }">Wikipedia Link</a>
             </div>
         </div>
-    
-    <br />
-    <div style="width: 100%; height: 175px;"></div>
-    <div style="width:100%">
-        <h4>Races <i class="fa fa-flag-checkered"></i>  (years)</h4>
+
+        <br />
+        <div style="width: 100%; height: 175px;"></div>
+        <div style="width:100%">
+            <h4>Races <i class="fa fa-flag-checkered"></i>  (years)</h4>
+        </div>
+        <div data-bind="foreach: Races" style="width: 100%">
+            <a data-bind="text: Year, attr: { href:'./raceDetails.html?id=' + RaceId }" title="selecione para ver detalhes" class="btn btn-outline-dark" style="margin: 5px;"></a>
+        </div>
     </div>
-    <div data-bind="foreach: Races" style="width: 100%">
-        <a data-bind="text: Year, attr: { href:'./raceDetails.html?id=' + RaceId }" title="selecione para ver detalhes" class="btn btn-outline-dark" style="margin: 5px;"></a>
-    </div>
-</div>
+    <div class="filler" style="width:100%;height:400px"></div>
+    <nav class="navbar navbar-dark bg-dark fixed-bottom">
+        <div class="container small">
+            <div class="navbar-text">&copy;  Introdução as Tecnologias Web - 2021/22</div>
+            <div class="navbar-text">Made with <i class="fa fa-heart-o text-danger"></i> for <a href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a> by <a href="mailto:filipe.obrist@ua.pt" class="text-decoration-none text-muted">filipe.obrist@ua.pt</a> &  <a href="mailto:rodrigoaguiar96@ua.pt" class="text-decoration-none text-muted">rodrigoaguiar96@ua.pt</a></div>
+            <div class="navbar-nav">
+                <div class="nav-item text-end"><a href="https://www.ua.pt" class="nav-link">Universidade de Aveiro</a></div>
+            </div>
+        </div>
+    </nav>
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
