--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -38,12 +38,6 @@
     </nav>
     <div class="filler" style="width:100%;height:50px"></div>
     <div class="container">
-        <div class="search-box">
-            <input class="search-txt" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px;" />
-            <a class="search-btn" id="button_search" style="height: 35px;" href="#" type="button">
-                <i class="fa fa-search"></i>
-            </a>
-        </div>
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Constructors List</h2>
         </div>
@@ -53,9 +47,6 @@
             <span data-bind="html: 'Constructors: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
         </p>
         <div class="row-cols-3">
-            <div class="row">
-                <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;margin-bottom:5px">Show Favorites</button>
-            </div>
             <div class="row">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
@@ -74,10 +65,15 @@
                     <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './constructors.html?page=' + nextPage(), rel:'next' }">→</a></li>
                     <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './constructors.html?page=' + totalPages() }">⇥</a></li>
                     <!-- /ko -->
+                    
                 </ul>
             </div>
         </div>
         <!-- /ko -->
+        <div class="form-group input-group rounded" style="position:absolute;right:100px;top:175px;margin-bottom:35px;;width: 30%; float: right; padding: 5px;">
+            <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
+            <button class="btn btn-outline-dark" id="button_delete" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-times-circle"></i></button>
+        </div>
         <div class="col-md-3 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
             <div class="zoom" style="width:30%; float:left; margin:20px;">
                 <!-- ko if: ImageUrl-->
