--- a/Projeto/seasons.html
+++ b/Projeto/seasons.html
@@ -122,7 +122,7 @@
             <hr>
             <h5>
                 <a data-bind="attr: { href: Url }">Wikipedia URL</a> </h5>
-                <div class ="button wrapper" >
+                <div class ="button wrapper" style="margin-bottom:30px" >
                 <button id="showDStand" class = "btn default btn-primary btn-sm"> Driver Standings</button>
                 <button id="showCStand" class = "btn default btn-primary btn-sm"> Constructor Standings</button>
                 <button id="showRaces" class = "btn default btn-primary btn-sm">Races</button>
