--- a/Projeto/favourites.html
+++ b/Projeto/favourites.html
@@ -24,37 +24,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html"><i class="fa fa-user"></i>Drivers</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html">Favourites</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-graduation-cap"></i>Constructors</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='constructors.html'>All constructors</a></li>
-                                <li><a class="dropdown-item" href="constructors2021.html">2021 Teams</a></li>
-                            </ul>
-                        </div>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favourites.html"><i class="fa fa-heart"></i>Favourites</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html"><i class="fa fa-graduation-cap"></i>Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html"><i class="fa fa-road"></i>Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="seasons.html"><i class="fa fa-calendar"></i>Seasons</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="races.html"><i class="fa fa-flag-checkered"></i>Races</a></li>
-                    <li class="nav-item">
-                        <div class="dropdown">
-                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                <li><a class="dropdown-item" href='history.html'>History</a></li>
-                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
-                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
-                                <li><a class="dropdown-item" href="tickets.html">Buy Tickets</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    
+                    <li class="nav-item me-auto"><a class="nav-link" aria-current="page" href="tickets.html"><i class="fa fa-shopping-cart"></i>  Tickets</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="filler" style="width:100%;height:60px"></div>
+    <div class="filler" style="width:100%;height:50px"></div>
     <!-- Working Area -->
     <div class="container">
         <div class="border-bottom border-danger pt-4 pb-2 mb-3">
