--- a/Projeto/circuitDetails.html
+++ b/Projeto/circuitDetails.html
@@ -94,7 +94,7 @@
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
     <script src="circuitDetails.js"></script>
-    <script async
+    <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCySu0b4e2ucTo6C6AZYEi-N9sB0sED340&callback=initMap">
 </script>
 </body>
