--- a/Projeto/constructors.html
+++ b/Projeto/constructors.html
@@ -42,7 +42,7 @@
             <h2>Constructors List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
-        <p class=" col-4 mr-auto pt-2">
+        <p class=" col-3 mr-auto pt-2">
             <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
             <span data-bind="html: 'Constructors: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
         </p>
@@ -65,7 +65,6 @@
                     <li class="page-item"><a class="page-link" title="Next Page" data-bind="attr: { href: './constructors.html?page=' + nextPage(), rel:'next' }">→</a></li>
                     <li class="page-item"><a class="page-link" title="Last Page" data-bind="attr: { href: './constructors.html?page=' + totalPages() }">⇥</a></li>
                     <!-- /ko -->
-                    
                 </ul>
             </div>
         </div>
@@ -74,7 +73,7 @@
             <input class="form-control me-2" placeholder="Search By Name" type="search" aria-label="Search" id="SearchText" style="height: 35px; width: 100px; border-radius: 3px;" />
             <button class="btn btn-outline-dark" id="button_delete" style="height: 35px; border-radius: 3px;" type="button"><i class="fa fa-times-circle"></i></button>
         </div>
-        <div class="col-md-3 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
+        <div class="col-md-6 col-lg-3 col-sm-12" data-bind="foreach: records" style="width:100%;">
             <div class="zoom" style="width:30%; float:left; margin:20px;">
                 <!-- ko if: ImageUrl-->
                 <img class="card-img-top" data-bind="attr:{src: ImageUrl}" style="width: 100%; height: 150px; border: 2px solid; border-bottom: none; border-top-left-radius: 6px; border-top-right-radius: 6px;" alt="Contructor Image">
@@ -87,6 +86,7 @@
                     <button class="btn btn-default btn-sm btn-outline-danger btn-favourite" data-bind="click: () => $parent.toggleFavourite(ConstructorId), attr : { 'id': 'favourite_' + ConstructorId }">
                         <i data-bind="attr : { 'class' : $parent.favourites2().includes(ConstructorId) ? 'fa fa-heart' : 'fa fa-heart-o'}" class="fa fa-heart-o" title="Selecione para adicionar aos favoritos"></i>
                     </button>
+                    <p class ="card-text">Nationality: <span data-bind="text: Nationality"></span></p>
                 </div>
                 <div class="footer">
                     <a data-bind="attr: { href:'./constructorDetails.html?id=' + ConstructorId }" class="btn btn-danger" style="width:100%; border-radius: 0px;">Constructor Details</a>
